--- a/css/style.css
+++ b/css/style.css
@@ -1663,6 +1663,7 @@ img {
     .header {
       position: absolute;
       width: 100%;
+      height: 120px;
     }
   }
   .header > .container {
@@ -3014,6 +3015,11 @@ img {
     font-size: 2em;
     text-align: center;
   }
+  @media screen and (max-width: 767px) {
+    .main h2 {
+      font-size: 1.875em;
+    }
+  }
   .contentBlock {
     padding: 50px 80px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.9) 15%, #ffffff 50%, rgba(255, 255, 255, 0.98) 95%, rgba(255, 255, 255, 0.9) 100%);
@@ -3025,7 +3031,12 @@ img {
   }
   @media screen and (max-width: 991px) {
     .contentBlock {
-      padding: 30px;
+      padding: 20px 30px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .contentBlock {
+      padding: 20px;
     }
   }
   .hidden {
