--- a/sass/module/_header.scss
+++ b/sass/module/_header.scss
@@ -93,6 +93,7 @@
   @include screen('mobile') {
     position: absolute;
     width: 100%;
+    height: 120px;
   }
   // &:before {
   //   position: absolute;
